Fix forum pfps, move around new stylesheets, update SCSS compilation scripts.

--- a/assets/scss/_style_forums.scss
+++ b/assets/scss/_style_forums.scss
@@ -67,6 +67,11 @@ table.c1 {
 	.sidebar {
 		border-top: 0 !important;
 		text-align: center;
+
+		.avatar {
+			max-width: 160px;
+			max-height: 160px;
+		}
 	}
 
 	.mainbar {
