--- a/bootstrap/bs-finalium-dark.scss
+++ b/bootstrap/bs-finalium-dark.scss
@@ -4,4 +4,4 @@
 // was used in ms2/alpha 3, which originated from darkly(?) -gamerappa 7/31/2021
 @import "_variables-finalium-dark.scss";
 @import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
-@import "custom-finalium.scss";
+@import "_custom-finalium.scss";
