--- a/forum/templates/_layout.twig
+++ b/forum/templates/_layout.twig
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{% block title %}Forum{% endblock %} - principia-web</title>
-		<link rel="stylesheet" href="../assets/style.css" type="text/css">
-		{% if userdata.darkmode %}<link rel="stylesheet" href="../assets/darkmode.css" type="text/css">{% endif %}
+		<link rel="stylesheet" href="../assets/css/style.css" type="text/css">
+		{% if userdata.darkmode %}<link rel="stylesheet" href="../assets/css/darkmode.css" type="text/css">{% endif %}
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<script src="assets/js/tools.js"></script>
 	</head>
