--- a/bootstrap/bs-dark.scss
+++ b/bootstrap/bs-dark.scss
@@ -1,3 +1,3 @@
 @import "_variables-dark.scss";
 @import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
-@import "custom-dark.scss";
+@import "_custom-dark.scss";
