--- a/bootstrap/bs-finalium.scss
+++ b/bootstrap/bs-finalium.scss
@@ -1,3 +1,3 @@
 @import "_variables-finalium.scss";
 @import "../vendor/twbs/bootstrap/scss/bootstrap.scss";
-@import "custom-finalium.scss";
+@import "_custom-finalium.scss";
