--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>{% block title %}{% endblock %} - squareBracket Next</title>
 	{% block head %}{% endblock %}
-	<link rel="stylesheet" id="bootstrap" href="assets/style.css" type="text/css">
+	<link rel="stylesheet" id="bootstrap" href="assets/css/style.css" type="text/css">
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="assets/common.js"></script>
 	<script> 
