--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,7 +4,7 @@ body {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-size: 0.9em;
 	margin: auto;
-	max-width: 95%;
+	width: 100%;
 	padding-bottom: 30px;
 	padding-left: 10px;
 	padding-right: 10px;
