--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "_normalize";
+@import "_variables";
+@import "_gradients";
 /* SB CSS STARTS HERE ======================================================== */
 
 // Small tablets and large smartphones (landscape view)
@@ -84,33 +87,37 @@ $breakpoints: (
     }
 }
 
+@each $state, $value in $theme-colors {
+  .bg-#{$state} {
+    @include gradient-y($start-color: lighten($value, 5%), $end-color: $value);
+  }
+}
+
 body {
-	background-color: #ffffff;
-	font-family: verdana, arial, helvetica, sans-serif;
+	background-color: #F0F0F0;
+	font-family: Inter, tahoma, verdana, arial, helvetica, sans-serif;
 	font-size: 0.9em;
 	margin: auto;
 	width: 100%;
 	padding-bottom: 30px;
-	padding-left: 10px;
-	padding-right: 10px;
 }
 
 a:link, a:visited {
-	color: #005177;
+	color: $teal;
 	text-decoration: none;
 }
 
 a:hover {
-    color: #cc3333;
+    color: $red;
     text-decoration: none;
 }
 
 p {
-	line-height: 1.4;
+	line-height: 1.25em;
 }
 
 .top, .footer {
-	background-color: #eee;
+	background-color: #f5f5f5;
 	border-bottom: 1px solid #ccc;
 	border-top: 1px solid #ccc;
 	margin-top: 0px;
@@ -120,7 +127,6 @@ p {
 
 .top {
 	height: 32px;
-	margin-top: 6px;
 	border-top-width: 0;
 }
 
@@ -164,6 +170,9 @@ ul.menu {
 		font-size: 1.1em;
 		font-weight: bold;
 		text-decoration: none;
+		padding-left: 0.25em;
+		padding-right: 0.25em;
+		border-radius: 5px;
 
 		&:hover {
 			background-color: #fff;
@@ -537,3 +546,7 @@ form.reglog {
 @import "_style_forums";
 /// Containers \\\
 @import "_containers";
+/// Images \\\
+@import "_images";
+/// Cards \\\
+@import "_cards";
