--- a/templates/prototype/components/browsevideobox.twig
+++ b/templates/prototype/components/browsevideobox.twig
@@ -1,13 +1,13 @@
 <div class="card" style="margin-bottom:10px">
 	<div class="card-body text-center">
-		<div class="row"><a href="watch.php?v={{ data.video_id }}">
-				<div class="col-lg-12" style="margin-bottom:15px">
+		<div class="grid"><a href="watch.php?v={{ data.video_id }}">
+				<div class="col" style="margin-bottom:15px">
 					<div class="img-thumbnail">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</div>
 			</a>
-			<div class="col-lg-12">
+			<div class="col">
 				<h4><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h4>
 				{# hack to prevent twig from outputing the number 1 #}
 				{% if data.views != 1 %}
