--- a/templates/prototype/components/videobox.twig
+++ b/templates/prototype/components/videobox.twig
@@ -1,9 +1,9 @@
 <div class="card" style="margin-bottom:4px">
 	<div class="card-body">
-		<div class="row">
+		<div class="grid">
 			<div class="col-4">
 				<a href="watch.php?v={{ data.video_id }}&frontend=new">
-					<div class="card card-info">
+					<div class="card card-body">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</a>
