--- a/templates/prototype/upload.twig
+++ b/templates/prototype/upload.twig
@@ -3,46 +3,35 @@
 {% block title %}{{ __("Upload") }}{% endblock %}
 
 	{% block content %}
-<div class="row">
 <h3>{{ __("Upload video") }}</h3>
 <p><span class="badge bg-primary">{{ icon('info-circle', 16) }} {{ __("Important") }}</span> {{ __("By uploading your videos onto squareBracket, you acknowledge about the upload guidelines.") }}</p>
+
+<div class="grid">
 <div class="col-8">
 <form name="uploadForm" id="uploadForm" method="post" action="upload.php"
 enctype="multipart/form-data">
 <br>
-
-<div class="row">
-	<div class="col-auto pe-0">
-		{{ icon('text-left', 24) }}
-	</div>
-	<div class="col-auto">
-		<h4>{{ __("Video info") }}</h4>
-	</div>
-</div>
-<p>{{ __("Enter the title and description of your video.") }}</p>
-
+	{{ icon('text-left', 24) }}
+	<h4>{{ __("Video info") }}</h4>
+	<p>{{ __("Enter the title and description of your video.") }}</p>
 	<input type="text" class="form-control mb-1" name="title" value="" placeholder="{{ __("Title") }}">
+	<br>
 	<textarea class="form-control mb-1" name="desc" maxlength="2000" form="uploadForm"
 	style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}"></textarea>
+	<br>
 	<input type="text" class="form-control" name="tags" value="" placeholder="{{ __("Tags") }}">
 	<br>
-<div class="row">
-	<div class="col-auto pe-0">
 		{{ icon('file-earmark-play', 24) }}
-	</div>
-	<div class="col-auto">
 		<h4>{{ __("Video file") }}</h4>
-	</div>
-</div>
-<p>{{ __("Select the video file you want to upload.") }}</p>
+		<p>{{ __("Select the video file you want to upload.") }}</p>
 	<input class="form-control" type="file" name="fileToUpload" id="fileToUpload" required>
 	<br>
 	</div>
 	<div class="col-4">
 <div class="card">
-  <h5 class="card-header">{{ __("Upload Guidelines") }}</h5>
+  <div class="card-header"><h5>{{ __("Upload Guidelines") }}</h5></div>
   <div class="card-body">
-    <p class="card-text">{{ __("Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.") }}</p>
+    <p>{{ __("Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.") }}</p>
     <a href="https://studio.youtube.com/" class="btn btn-secondary">{{ __("Upload anyways") }}</a>
   </div>
 </div>
