--- a/templates/prototype/upload_part1.twig
+++ b/templates/prototype/upload_part1.twig
@@ -53,9 +53,8 @@
 </style>
 {% endblock %}
 {% block content %}
-<div class="row">
-<div class="row g-4 pb-5 row-cols-1 row-cols-lg-3">
-      <div class="feature col">
+<div class="grid">
+      <div class="feature col-4">
         <div class="feature-icon bg-primary">
           {{ icon_alt('film', 32) }}
         </div>
@@ -66,7 +65,7 @@
           {{ icon('chevron-right', 16) }}
         </a>
       </div>
-      <div class="feature col">
+      <div class="feature col-4">
         <div class="feature-icon bg-carrot">
           {{ icon_alt('music-note-beamed', 32) }}
         </div>
@@ -77,7 +76,7 @@
           {{ icon('chevron-right', 16) }}
         </a>
       </div>
-      <div class="feature col">
+      <div class="feature col-4">
         <div class="feature-icon bg-violet">
           {{ icon_alt('easel', 32) }}
         </div>
@@ -87,6 +86,5 @@
           {{ __("Upload artwork") }} (Unfinished)
           {{ icon('chevron-right', 16) }}
         </a>
-      </div>
     </div>
 {% endblock %}
