--- a/forum/templates/_layout.twig
+++ b/forum/templates/_layout.twig
@@ -16,12 +16,13 @@
 				<li><a href="../browse.php" class="btn">Videos</a></li>
 				<li><a href="../music.php" class="btn">Music</a></li>
 				<li><a href="../artwork.php" class="btn">Artwork</a></li>
-				<li><a href="./" class="btn">Forums</a></li>
-				<li><a href="../search.php" class="btn"><img src="../assets/icons/search.svg" class="search"></a></li>
+				<li><a href="../forum/" class="btn">Forums</a></li>
 			</ul>
 			<ul class="menu right">
 				<li><em>
+				<a href="../search.php" class="btn"><img src="../assets/icons/search.svg" class="search"></a>
 					{% if log %}
+						<a href="../upload.php">Upload</a>
 						{{ userlink(userdata) }}
 						{% if notification_count > 0 %}
 							<span class="notifs">[{{ notification_count }}]</span>
