--- a/templates/prototype/components/pagination.twig
+++ b/templates/prototype/components/pagination.twig
@@ -1,35 +1,15 @@
-{# twig pagination code from: https://gist.github.com/maxpou/612359ed4af4cc5c4f06#gistcomment-3694029 #}
-{# TODO this breaks when there are more than 5 pages apparently. we need to fix it before that becomes a thing to worry about. #}
-{% if total > 1 %}
-	<ul class="pagination my-4">
-		{% if current > 1 %}
-			<li><a class="page-link" href="{{ (url ~ (current-1))|e }}">&laquo;</a></li>
-		{% endif %}
-		{% for i in 1..total %}
-			{% if 0 == (current - nearbyPagesLimit) - loop.index %}
-				<li class="page-item"><a href="{{ (app.request.pathInfo ~ '?' ~ (app.request.query.all ~ "page=" ~ 1 |url_encode))|e }}" class="page-link">1</a></li>
-				{% if 1 != loop.index %}
-					<li class="page-item">
-						<a href="javascript:void(0)" class="page-link">...</a>
-					</li>
+{% set pages = (levels / lpp)|round(0, 'ceil') %}
+{% if pages > 1 %}
+	<div class="pagination">
+		{% for page in 1..pages %}
+			<span>
+				{% if page != current %}
+					<a href="{{ url | format(page) }}"> {{ page }} </a>
+				{% else %}
+					{{ page }}
 				{% endif %}
-			{% elseif 0 == (current + nearbyPagesLimit) - loop.index  and (current + nearbyPagesLimit) < total %}
-				<li class="page-item">
-					<a href="javascript:void(0)" class="page-link">...</a>
-				</li>
-			{% elseif 0 < (current - nearbyPagesLimit) - loop.index %}
-			{% elseif 0 > (current + nearbyPagesLimit) - loop.index %}
-			{% else %}
-				<li class="page-item{{ current == loop.index ? ' active' }}">
-					<a href="{{ url ~ loop.index }}" class="page-link">{{ loop.index }}</a>
-				</li>
-			{% endif %}
+			</span>
 		{% endfor %}
-		{% if current != total  and (current + nearbyPagesLimit) < total %}
-			<li class="page-item"><a href="{{ (app.request.pathInfo ~ '?' ~ (app.request.query.all ~ "page=" ~ total |url_encode))|e }}" class="page-link">{{ total }}</a></li>
-		{% endif %}
-		{% if current < total %}
-			<li><a class="page-link" href="{{ (url ~ (current+1))|e }}">&raquo;</a></li>
-		{% endif %}
-	</ul>
+	</div>
 {% endif %}
+
