--- a/templates/prototype/browse.twig
+++ b/templates/prototype/browse.twig
@@ -3,17 +3,16 @@
 {% block title %}Latest videos {% if page != 1 %}(Page {{ page }}){% endif %}{% endblock %}
 
 	{% block content %}
-<div class="latest-buttons">
-	<a {% if type == 'misc' %}class="sel"{% endif %} href="latest.php?type=misc">Miscellanous</a>
-	<a {% if type == 'entertainment' %}class="sel"{% endif %} href="latest.php?type=entertainment">Entertainment</a>
-	<a {% if type == 'comedy' %}class="sel"{% endif %} href="latest.php?type=comedy">Shitposting & Comedy</a>
-	<a {% if type == 'gaming' %}class="sel"{% endif %} href="latest.php?type=gaming">Gaming</a>
-	<a {% if type == 'news' %}class="sel"{% endif %} href="latest.php?type=news">News and Updates</a>
-	<a {% if type == 'life' %}class="sel"{% endif %} href="latest.php?type=life">Life</a>
-	<a {% if type == 'technology' %}class="sel"{% endif %} href="latest.php?type=technology">Science & Technology</a>
-	<a {% if type == 'backup' %}class="sel"{% endif %} href="latest.php?type=backup">Archive Dump</a>
-	<a {% if type == 'all' %}class="sel"{% endif %} href="latest.php?type=all">All</a>
-</div>
+	<a class="{% if type == 'misc' %}sel{% endif %} button button-primary" href="browse.php?type=misc">Miscellanous</a>
+	<a class="{% if type == 'entertainment' %}sel{% endif %} button button-primary" href="browse.php?type=entertainment">Entertainment</a>
+	<a class="{% if type == 'comedy' %}sel{% endif %} button button-primary" href="browse.php?type=comedy">Shitposting & Comedy</a>
+	<a class="{% if type == 'gaming' %}sel{% endif %} button button-primary" href="browse.php?type=gaming">Gaming</a>
+	<a class="{% if type == 'news' %}sel{% endif %} button button-primary" href="browse.php?type=news">News and Updates</a>
+	<a class="{% if type == 'life' %}sel{% endif %} button button-primary" href="browse.php?type=life">Life</a>
+	<a class="{% if type == 'technology' %}sel{% endif %} button button-primary" href="browse.php?type=technology">Science & Technology</a>
+	<a class="{% if type == 'backup' %}sel{% endif %} button button-primary" href="browse.php?type=backup">Archive Dump</a>
+	<a class="{% if type == 'all' %}sel{% endif %} button button-primary" href="browse.php?type=all">All</a>
+	<br>
 
 {% for level in levels %}
 	{{ video_box(level) }}
@@ -22,9 +21,9 @@
 {% endfor %}
 
 {% if type == 'all' %}
-	{% set le_url = 'latest.php?page=%s' %}
+	{% set le_url = 'browse.php?page=%s' %}
 {% else %}
-	{% set le_url = 'latest.php?type=' ~ type ~ '&page=%s' %}
+	{% set le_url = 'browse.php?type=' ~ type ~ '&page=%s' %}
 {% endif %}
 {{ pagination(level_count, glob_lpp, le_url, page) }}
 
