commit in a few months

--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -47,6 +47,7 @@
 						{% endif %}
 					{% else %}
 						<a href="../login.php">Login</a>
+						<a href="../register.php">Sign Up</a>
 					{% endif %}
 				</em></li>
 			</ul>
