add text shadow + fix watch page video box

--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
-<div class="row">
+<div class="grid">
 <div class="col-8">
 		<div id="container" style="height: 30rem;">
 			<!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
