--- a/forum/templates/_layout.twig
+++ b/forum/templates/_layout.twig
@@ -49,6 +49,7 @@
 			{% endif %}
 		</div>
 		{% block precontent %}{% endblock %}<br>
+		<div class="container">
 		<div class="home content forum">
 			{% block content %}{% endblock %}
 		</div><br>
@@ -59,6 +60,7 @@
 			Running <a href="https://github.com/gr-sb/squarebracket">squareBracket</a>,
 			on commit <a href="https://github.com/gr-sb/squarebracket/commit/{{ git_commit(false) }}">{{ git_commit() }}</a><br>
 			{{ profiler_stats() }}
+		</div>
 		</div>
 		<script type="text/javascript" src="assets/base.js"></script>
 		{% block custom_footer %}{% endblock %}
