--- a/templates/prototype/components/smallvideobox.twig
+++ b/templates/prototype/components/smallvideobox.twig
@@ -1,6 +1,6 @@
 <div class="card card-info" style="margin-bottom:4px; line-height: 15px;">
 	<div class="card-body">
-		<div class="row">
+		<div class="grid">
 			<div class="col col-4">
 				<a href="watch.php?v={{ data.video_id }}&frontend=new">
 					<div class="card card-info">
