--- a/templates/prototype/upload.twig
+++ b/templates/prototype/upload.twig
@@ -32,13 +32,13 @@ enctype="multipart/form-data">
   <div class="card-header"><h5>{{ __("Upload Guidelines") }}</h5></div>
   <div class="card-body">
     <p>{{ __("Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.") }}</p>
-    <a href="https://studio.youtube.com/" class="btn btn-secondary">{{ __("Upload anyways") }}</a>
+    <a href="https://studio.youtube.com/" class="button button-secondary">{{ __("Upload anyways") }}</a>
   </div>
 </div>
 	</div>
 	
 	<div class="text-end">
-	<input class="btn btn-primary" type="submit" id="upload" name="upload"
+	<input class="button button-primary" type="submit" id="upload" name="upload"
 	value="{{ __("Upload") }}">
 	</div>
 </form>
