--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -3,7 +3,6 @@
 }
 
 .button {
-	border: 1px solid black;
 	border-radius: 3px;
 	color: white;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15) !important;
@@ -26,6 +25,7 @@
 
 @each $state, $value in $theme-colors {
   .button-#{$state} {
+    border: 1px solid darken($value, 2.25%);
     @include gradient-y($start-color: lighten($value, 15%), $end-color: $value);
 	color: contrast-color($value, $dark, $light) !important;
   }
