--- a/templates/prototype/settings.twig
+++ b/templates/prototype/settings.twig
@@ -58,7 +58,7 @@
 		</td>
 </table>
 <input type="hidden" name="magic" value="please change my settings :)">
-<input type="submit" name="action" value="Save Changes">
+<input class="button button-primary" type="submit" name="action" value="Save Changes">
 	{% endblock %}
 
 {% block custom_footer %}
