--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -140,7 +140,6 @@ ul.menu {
 
 	&.right li {
 		float: right;
-		font-style: italic;
 		padding-right: 4px;
 
 		.notifs {
@@ -526,6 +525,25 @@ form.reglog {
 		}
 	}
 }
+
+.main-content {
+	background: -moz-linear-gradient(top left, #312a6c, #852d91);
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    min-height: 300px;
+    color: #ffffff;
+    display: flex;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15) !important;
+	
+	.container {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+	width: 100%;
+	}
+}
+
 /// Gradients \\\
 @import "_gradients";
 /// Backgrounds \\\
