--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -27,7 +27,7 @@
 	{% block customcss %}{% endblock %}
 </head>
 <body>
-		<div class="top">
+		<div class="top bg-light">
 			<a href="../"><img class="picon" src="../assets/logo.png"/></a>
 			<ul class="menu left">
 				<li><a href="../" class="btn">Home</a></li>
@@ -46,14 +46,14 @@
 							<span class="notifs">[{{ notification_count }}]</span>
 						{% endif %}
 					{% else %}
-						<a href="../login.php">Login</a>
-						<a href="../register.php">Sign Up</a>
+						<a href="../login.php">Sign in</a>
+						<a href="../register.php">Register</a>
 					{% endif %}
 				</em></li>
 			</ul>
 		</div>
+	{% block precontent %}{% endblock %}
 	<div class="container">
-	<h1>{{ block('title') }}</h1>
 		{% block content %}{% endblock %}
 	</div>
 		<footer class="p-3">
