"follow", not "subscribe"

--- a/templates/prototype/index.twig
+++ b/templates/prototype/index.twig
@@ -16,7 +16,7 @@
 							{% set pluralViews = __("s") %}
 						{% endif %}
 						<p class="fs-5 mb-1">@{{ userdata.name }}
-						&bull; {{ __("%s subscriber%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}
+						&bull; {{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}
 						&bull; {{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }}</p>
 						<a class="button button-primary btn-lg" href="../studio.php">Go to studio</a>
 				</div>
