--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -6,7 +6,7 @@
 	border-radius: 3px;
 	color: white;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15) !important;
-	padding: 5px 9px;
+	padding: 8px 13px
 	margin: 2px;
 	margin-bottom: 1em;
 	display: inline-block;
