--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -29,4 +29,16 @@
     @include gradient-y($start-color: lighten($value, 15%), $end-color: $value);
 	color: contrast-color($value, $dark, $light) !important;
   }
+  
+  .button-#{$state}:hover {
+    border: 1px solid darken($value, 1%);
+    @include gradient-y($start-color: lighten($value, 25%), $end-color: lighten($value, 10%));
+	color: contrast-color($value, $dark, $light) !important;
+  }
+  
+  .button-#{$state}:active {
+    border: 1px solid darken($value, 10%);
+    @include gradient-y($start-color: darken($value, 7%), $end-color: darken($value, 17%));
+	color: contrast-color($value, $dark, $light) !important;
+  }
 }
