Change "channel description" to "about".

--- a/templates/prototype/settings.twig
+++ b/templates/prototype/settings.twig
@@ -45,10 +45,10 @@
 	{% endif %}
 	<tr>
 		<td class="a">
-			Channel Description
+			About
 			<br><em>Markdown allowed.</em>
 		</td>
-		<td class="b"><textarea name="description" rows="5" cols="80" wrap="virtual">{{ userdata.description }}</textarea></td>
+		<td class="b"><textarea name="about" rows="5" cols="80" wrap="virtual">{{ userdata.about }}</textarea></td>
 	</tr>
 	<tr>
 		<td class="a">Forum signature</td>
