header on profiles + early not-so-proper category list

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -547,6 +547,8 @@ form.reglog {
 @import "_cards";
 /// Buttons \\\
 @import "_buttons";
+/// Navs \\\
+@import "_navs";
 
 a:link, a:visited {
 	color: $teal;
