--- a/templates/prototype/settings.twig
+++ b/templates/prototype/settings.twig
@@ -29,7 +29,7 @@
 	<tr>
 		<td class="a">Profile Picture</td>
 		<td class="b">
-			<img class="float-start rounded" src="{{ profile_image(userdata.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
+			<img class="float-start rounded" src="{{ profile_image(userdata.name) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
 			<input class="form-control" type="file" name="profilePicture" id="profilePicture">
 		</td>
 	</tr>
